loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:10: error: not found: value nbBag
         nbBag = nbBag +1
         ^Poucet2:15: error: not found: value nbBag
     if(nbBag >= 3){ 
        ^Poucet2:20: error: not found: value nbBag
     nbBag = 0
     ^